// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<List /> should not render invalid children 1`] = `
<List
  hasImages={false}
  testId={null}
>
  <List
    className=""
  >
    <ul
      className="css-gkw1j5 "
    >
      <ListItem
        className="css-1nftllw css-1ym3l2n"
        isSelected={false}
        key="child-0/.0"
      >
        <li
          className="css-1p5q8vq css-1nftllw css-1ym3l2n css-16gj3o1"
          data-test-id="listItem"
        >
          <div
            className="css-1ckzvk7"
            data-test-id={null}
          >
            <Item
              className={null}
              image={null}
              isDisabled={false}
              isSelected={false}
              link={null}
              onClick={null}
              rightComponent={null}
              testId={null}
              title="List Item"
            >
              <div
                data-test-id={null}
              >
                <Grid
                  className="css-1qcr7hz"
                  component="div"
                  wrap={false}
                >
                  <div
                    className="css-1qcr7hz css-h7r55a"
                  >
                    <GridItem
                      className="css-10fxwvh"
                      component="div"
                      grow={1}
                      shrink={1}
                    >
                      <div
                        className="css-10fxwvh css-1gs0ko2"
                      >
                        List Item
                      </div>
                    </GridItem>
                  </div>
                </Grid>
              </div>
            </Item>
          </div>
        </li>
      </ListItem>
    </ul>
  </List>
</List>
`;

exports[`<List /> should not render without children 1`] = `
<List
  hasImages={false}
  testId={null}
/>
`;

exports[`<List /> should render a child and add styles for list items with images 1`] = `
<List
  hasImages={true}
  testId={null}
>
  <List
    className=""
  >
    <ul
      className="css-gkw1j5 "
    >
      <ListItem
        className="css-1nftllw css-1ym3l2n css-1brrprg"
        isSelected={false}
        key="child-0/.0"
      >
        <li
          className="css-1p5q8vq css-1nftllw css-1ym3l2n css-1brrprg css-16gj3o1"
          data-test-id="listItem"
        >
          <div
            className="css-1ckzvk7"
            data-test-id={null}
          >
            <Item
              className={null}
              image={null}
              isDisabled={false}
              isSelected={false}
              link={null}
              onClick={null}
              rightComponent={null}
              testId={null}
              title="List Item"
            >
              <div
                data-test-id={null}
              >
                <Grid
                  className="css-1qcr7hz"
                  component="div"
                  wrap={false}
                >
                  <div
                    className="css-1qcr7hz css-h7r55a"
                  >
                    <GridItem
                      className="css-10fxwvh"
                      component="div"
                      grow={1}
                      shrink={1}
                    >
                      <div
                        className="css-10fxwvh css-1gs0ko2"
                      >
                        List Item
                      </div>
                    </GridItem>
                  </div>
                </Grid>
              </div>
            </Item>
          </div>
        </li>
      </ListItem>
    </ul>
  </List>
</List>
`;

exports[`<List /> should render with two children 1`] = `
<List
  hasImages={false}
  testId={null}
>
  <List
    className=""
  >
    <ul
      className="css-gkw1j5 "
    >
      <ListItem
        className="css-1nftllw css-1ym3l2n"
        isSelected={false}
        key="child-0/.0"
      >
        <li
          className="css-1p5q8vq css-1nftllw css-1ym3l2n css-16gj3o1"
          data-test-id="listItem"
        >
          <div
            className="css-1ckzvk7"
            data-test-id={null}
          >
            <Item
              className={null}
              image={null}
              isDisabled={false}
              isSelected={false}
              link={null}
              onClick={null}
              rightComponent={null}
              testId={null}
              title="List Item"
            >
              <div
                data-test-id={null}
              >
                <Grid
                  className="css-1qcr7hz"
                  component="div"
                  wrap={false}
                >
                  <div
                    className="css-1qcr7hz css-h7r55a"
                  >
                    <GridItem
                      className="css-10fxwvh"
                      component="div"
                      grow={1}
                      shrink={1}
                    >
                      <div
                        className="css-10fxwvh css-1gs0ko2"
                      >
                        List Item
                      </div>
                    </GridItem>
                  </div>
                </Grid>
              </div>
            </Item>
          </div>
        </li>
      </ListItem>
      <ListItem
        className="css-1nftllw"
        isSelected={false}
        key="child-1/.1"
      >
        <li
          className="css-1p5q8vq css-1nftllw css-16gj3o1"
          data-test-id="listItem"
        >
          <div
            className="css-1ckzvk7"
            data-test-id={null}
          >
            <Item
              className={null}
              image={null}
              isDisabled={false}
              isSelected={false}
              link={null}
              onClick={null}
              rightComponent={null}
              testId={null}
              title="List Item"
            >
              <div
                data-test-id={null}
              >
                <Grid
                  className="css-1qcr7hz"
                  component="div"
                  wrap={false}
                >
                  <div
                    className="css-1qcr7hz css-h7r55a"
                  >
                    <GridItem
                      className="css-10fxwvh"
                      component="div"
                      grow={1}
                      shrink={1}
                    >
                      <div
                        className="css-10fxwvh css-1gs0ko2"
                      >
                        List Item
                      </div>
                    </GridItem>
                  </div>
                </Grid>
              </div>
            </Item>
          </div>
        </li>
      </ListItem>
    </ul>
  </List>
</List>
`;
